hphp/hack/test/typecheck/tconst/bad_input_type.php.exp
File "bad_input_type.php", line 10, characters 7-8:
Invalid argument (Typing[4110])
File "bad_input_type.php", line 7, characters 14-17:
This is an int
File "bad_input_type.php", line 4, characters 18-20:
  resulting from expanding the type constant C::T
File "bad_input_type.php", line 10, characters 7-8:
It is incompatible with a string
